Fixed logout button issue on mobile, fix line clamping on chats (again)

--- a/coldpress/r/css/main.css
+++ b/coldpress/r/css/main.css
@@ -703,7 +703,7 @@ nav .user .name {
     position: relative;
     text-overflow: ellipsis;
     align-self: center;
-    max-height: 4rem;
+    height: 4rem;
     text-align: left;
     overflow: hidden;
 
