--- a/coldpress/r/css/mobile.css
+++ b/coldpress/r/css/mobile.css
@@ -72,7 +72,7 @@
     }
 
     nav ul {
-        margin-bottom: 1rem;
+        margin-bottom: 4rem;
     }
     
     nav li svg {
